# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PyCSPadImage
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

#---------------------
2015-01-06 Mikhail S. Dubrovin
Tag: V00-00-25
- CSPAD2x2ImageUtils.py - add support for non-standard (2,185,388) shape of cspad2x2 ndarray
	
#---------------------
2014-07-18 Mikhail S. Dubrovin
Tag: V00-00-24
- CalibParsDefault.py - change default parameters for marg_gap_shift and offset
- GlobalMethods.py - in getCSPadArrayFromFile add input from *.npy 	
- Alignment.py - update

#---------------------
2014-07-02 Mikhail S. Dubrovin
Tag: V00-00-23
- CSPADPixCoords.py - use offset for pixel coordinates by default - add do_crop=True

#---------------------
2014-06-20 Mikhail S. Dubrovin
Tag: V00-00-22
-       src/PixCoords2x1.py - add get_xyz_maps_um(sp), add singleton cspad2x1_one
-       src/Alignment.py - add allignment for new optical data
	
#---------------------
2014-03-27 Mikhail S. Dubrovin
Tag: V00-00-21
- move GlobalGraphics and AngularIntegrator in pyimgalgos
- in all imports use full path - import Package.Module as ...
- removed loop dependence between HDF5Methods and CSPADCalibParsEvaluated
	
#---------------------
2014-03-26 Mikhail S. Dubrovin
Tag: V00-00-20
- add new ring center searching algorithm in quad alignment Alignment.py old went to AlignmentV1.py
	
#---------------------
2012-12-17 Mikhail S. Dubrovin
Tag: V00-00-19
A       src/CSPAD2x2ImageUtils.py
A       src/CSPADImageUtils.py

#---------------------
2012-11-25 Mikhail S. Dubrovin
Tag: V00-00-18
- in GlobalGraphics.py add protected setting for matplotlib.use('Qt4Agg')

#---------------------
2012-10-22 Mikhail S. Dubrovin
Tag: V00-00-17
- in CSPadConfigPars.py comment test print statements

#---------------------
2012-09-24 Mikhail S. Dubrovin
Tag: V00-00-16